--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
