--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
     ],
     "scripts": {
         "dev": "vite",
-        "build": "rimraf dist && tsc && vite build",
+        "build": "rimraf dist && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
     "dependencies": {
         "jszip": "^3.10.1",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
-        "react-spinners": "^0.13.8",
-        "styled-components": "^6.1.8"
+        "react-spinners": "^0.13.8"
     },
     "peerDependencies": {
         "react": "^19.0.0-rc-69d4b800-20241021 || ^19.1.0",
@@ -31,14 +28,17 @@
         "@types/node": "^22.14.0",
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
+        "@types/styled-components": "^5.1.34",
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
         "@vitejs/plugin-react": "^4.2.1",
+        "ajv": "^8.17.1",
         "eslint": "^8.56.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "rimraf": "^6.0.1",
         "typescript": "^5.2.2",
-        "vite": "^5.1.4"
+        "vite": "^5.1.4",
+        "vite-plugin-dts": "^4.5.3"
     }
 }
