--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "scripts": {
         "dev": "vite",
         "build": "rimraf dist && vite build",
+        "prepublishOnly": "rimraf dist && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
